force-app/main/default/objects/Account/fields/area_1__c.field-meta.xml
<CustomField>
    <fullName>area_1__c</fullName>
    <label>area_1</label>
    <type>TextArea</type>
</CustomField>