force-app/main/default/objects/Account/fields/BTC_Wallet__c.field-meta.xml
<CustomField>
    <fullName>BTC_Wallet__c</fullName>
    <label>BTC Wallet</label>
    <length>80</length>
    <type>Text</type>
</CustomField>