force-app/main/default/objects/Account/fields/CASH__c.field-meta.xml
<CustomField>
    <fullName>CASH__c</fullName>
    <label>CASH</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>