force-app/main/default/objects/Account/fields/ETH_Wallet__c.field-meta.xml
<CustomField>
    <fullName>ETH_Wallet__c</fullName>
    <label>ETH Wallet</label>
    <length>80</length>
    <type>Text</type>
</CustomField>