force-app/main/default/objects/Account/fields/externalID__c.field-meta.xml
<CustomField>
    <fullName>externalID__c</fullName>
    <label>externalID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>