force-app/main/default/objects/Account/fields/MAC__c.field-meta.xml
<CustomField>
    <fullName>MAC__c</fullName>
    <label>MAC</label>
    <length>80</length>
    <type>Text</type>
</CustomField>