force-app/main/default/objects/Account/fields/Max_Oppo__c.field-meta.xml
<CustomField>
    <fullName>Max_Oppo__c</fullName>
    <label>Max Oppo</label>
    <summarizedField>Opportunity.ExpectedRevenue</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>