force-app/main/default/objects/Account/fields/My_Date__c.field-meta.xml
<CustomField>
    <fullName>My_Date__c</fullName>
    <label>My_Date</label>
    <type>Date</type>
</CustomField>