force-app/main/default/objects/Account/fields/test_1_Autonumber__c.field-meta.xml
<CustomField>
    <fullName>test_1_Autonumber__c</fullName>
    <label>test-1-Autonumber</label>
    <type>AutoNumber</type>
</CustomField>