force-app/main/default/objects/Account/fields/test_9__c.field-meta.xml
<CustomField>
    <fullName>test_9__c</fullName>
    <label>test_9</label>
    <length>18</length>
    <type>Text</type>
</CustomField>