force-app/main/default/objects/Account/fields/testroll__c.field-meta.xml
<CustomField>
    <fullName>testroll__c</fullName>
    <label>testroll</label>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>