force-app/main/default/objects/Account/fields/Thrusted_IP_End__c.field-meta.xml
<CustomField>
    <fullName>Thrusted_IP_End__c</fullName>
    <label>Thrusted IP End</label>
    <length>80</length>
    <type>Text</type>
</CustomField>