force-app/main/default/objects/Account/fields/Thrusted_IP_Start__c.field-meta.xml
<CustomField>
    <fullName>Thrusted_IP_Start__c</fullName>
    <label>Thrusted IP Start</label>
    <length>80</length>
    <type>Text</type>
</CustomField>