force-app/main/default/objects/Account/fields/Verified__c.field-meta.xml
<CustomField>
    <fullName>Verified__c</fullName>
    <label>Verified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TRUE</fullName>
            </value>
            <value>
                <fullName>FALSE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>