force-app/main/default/objects/Account/validationRules/Account_Number_8_Characters.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Number_8_Characters</fullName>
    <active>false</active>
    <description>...</description>
    <errorConditionFormula>LEN( AccountNumber )   &lt;&gt;  8</errorConditionFormula>
    <errorDisplayField>AccountNumber</errorDisplayField>
    <errorMessage>lütfen 8 karakterli bir numara giriniz!</errorMessage>
</ValidationRule>