force-app/main/default/objects/Account/validationRules/hesap_numarasi_rakam_olur.validationRule-meta.xml
<ValidationRule>
    <fullName>hesap_numarasi_rakam_olur</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
 NOT( ISBLANK( AccountNumber ) ) ,
  NOT( ISNUMBER( AccountNumber ) ) 

)</errorConditionFormula>
    <errorMessage>hesap numarası boş bırakılmaz ve sadece rakam içerir.</errorMessage>
</ValidationRule>