force-app/main/default/objects/Account/validationRules/web_sitesi_uzantisi.validationRule-meta.xml
<ValidationRule>
    <fullName>web_sitesi_uzantisi</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
   
   RIGHT( web_site__c, 4) &lt;&gt; &quot;.com&quot;,
   RIGHT( web_site__c, 4) &lt;&gt; &quot;.org&quot;,
   RIGHT( web_site__c, 4) &lt;&gt; &quot;.net&quot;,
   RIGHT( web_site__c, 7) &lt;&gt; &quot;.edu.tr&quot;
)</errorConditionFormula>
    <errorDisplayField>web_site__c</errorDisplayField>
    <errorMessage>Lütfen yazdığınız URL&apos;yi kontrol edin.</errorMessage>
</ValidationRule>