force-app/main/default/objects/Account/listViews/All_Accounts.listView-meta.xml
<ListView>
    <fullName>All_Accounts</fullName>
    <columns>IS_PERSON_ACCOUNT</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>externalID__c</columns>
    <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
    <columns>My_Date__c</columns>
    <columns>ACCOUNT.URL</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>Max_Oppo__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>Email__c</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <label>All Accounts</label>
</ListView>